--- a/style.css
+++ b/style.css
@@ -4,6 +4,22 @@
     background-size:cover;
     height:100vh;
 }
+.foimage2{
+    background-image: url(kepek/trabant.jpg);
+    background-size:cover;
+    height:130vh;
+}
+.foimage3{
+    background-image: url(kepek/kispolski.jpg);
+    background-size:cover;
+    height:140vh;
+}
+.foimage4{
+    background-image: url(kepek/lada.jpg);
+    background-size:cover;
+    height:100vh;
+}
+
 .foszoveg{
     text-align:center;
     background-image: linear-gradient(lightblue, blue);
@@ -25,6 +41,14 @@
 .topnav a:hover{
     background-color: blue;
     color:white;
+}
+
+table, tr, td{
+    text-align:center;
+    justify-content: center;
+    border:1px solid black;
+    padding:20px;
+    margin-left:30%;
 }
 
 @media screen and (max-width: 900px){
